--- a/src/App.css
+++ b/src/App.css
@@ -28,10 +28,15 @@
   color: #61dafb;
 }
 
+.no-wrap {
+  white-space: nowrap;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
